fix: overflow from popover in script editor

--- a/src/management-system-v2/app/(dashboard)/[environmentId]/processes/[mode]/[processId]/script-task-editor/tab-bar-height.module.scss
+++ b/src/management-system-v2/app/(dashboard)/[environmentId]/processes/[mode]/[processId]/script-task-editor/tab-bar-height.module.scss
@@ -3,7 +3,7 @@
 
   :global(.ant-tabs-content-holder) {
     flex: 1;
-    overflow: auto;
+    overflow: visible;
   }
 
   :global(.ant-tabs-content) {
